--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+@layer base {
+  html {
+    font-family: quicksand, system-ui, sans-serif;
+  }
+}
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -14,4 +19,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+.iconHover {
+  background-color: #f9a109;
+}
+
+.triangle:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-right-color: #454545;
+  border-left: 0;
+  margin-top: -5px;
+  margin-left: -5px;
 }
