--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,3 +38,23 @@ code {
   margin-top: -5px;
   margin-left: -5px;
 }
+
+/* Shopping List Item Component */
+.shoppingListItem {
+  @apply flex justify-between items-center my-3 gap-2 bg-bgLightOrange;
+}
+.shoppingListItem > h1 {
+  @apply text-black text-lg font-medium flex-1;
+}
+.shoppingListItemCount {
+  @apply text-bgOrange border-2 border-bgOrange rounded-full py-2 px-5 text-xs font-bold cursor-pointer;
+}
+.shoppingListItemEdit {
+  @apply bg-white rounded-md flex flex-1 h-11 items-center justify-between gap-2 min-w-[174px];
+}
+.shoppingListItemDelete {
+  @apply bg-bgOrange h-full flex flex-1 max-w-[38px] rounded-lg text-white items-center justify-center text-xl cursor-pointer;
+}
+.shoppingListItemCountUpdate {
+  @apply text-bgOrange text-2xl cursor-pointer;
+}
